# genie

./: .genieignore  .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  install.sh  main.html  package-lock.json  package.json  tsconfig.json
.github/workflows/: publish.yml
.rocket/: ARCHITECTURE.md  README.md  SYMBOLS.md
common/: genieService.ts  index.ts  mcpClient.ts  types.ts
mcp/: mcpServer.js  mcpServer.ts
node/: genieNodeService.js  genieNodeService.ts  index.ts  nativeBindings.js  nativeBindings.ts
notebooks/: test.ipynb
scripts/: copy-native.cjs  integration-test.cjs
src/: cli.ts  ignore.rs  lib.rs  main.rs  registry.rs
src/commands/: clear.ts  dependents.ts  deps.ts  index.ts  info.ts  search.ts  serve.ts  status.ts  summary.ts
src/output/: pretty.ts  types.ts
src/utils/: logger.ts  paths.ts  service.ts  spinner.ts
ui/: main.html
