[package]
name = "genie"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.31", features = ["bundled"] }
sha2 = "0.10"
warp = "0.3.5"
tokio = { version = "1.42", features = ["full"] }
globset = "0.4"
clap_complete = "4.5"
clap_mangen = "0.2"
self_update = { version = "0.41", default-features = false, features = ["archive-zip"] }